# agent-task-verifier

./: .gitmodules  README.md
frontend/: package-lock.json  package.json
frontend/app/: GenerateProof.tsx  TokenAllocation.tsx  VerifyProof.tsx  globals.css  page.tsx  polling.ts
frontend/app/api/generate-proof/: route.ts
frontend/app/api/receive-proof/: route.ts
frontend/app/api/send/: route.ts
sp1-project-template/contracts/: README.md  foundry.toml
sp1-project-template/contracts/script/: BucketVerifierScript.s.sol  CustomTokenScript.s.sol  FibonacciScript.s.sol  VerifierScript.s.sol
sp1-project-template/contracts/src/: BucketVerifier.sol  CustomToken.sol  Verifier.sol
sp1-project-template/lib/src/: lib.rs
sp1-project-template/program/: Cargo.toml
sp1-project-template/program/src/: main.rs
sp1-project-template/script/: Cargo.toml
sp1-project-template/script/fixtures/: core-bucket-fixture.json
