[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "fibonacci"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "fibonacci"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "4.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
fibonacci-lib = { path = "../lib" }
dotenv = "0.15.0"
tokio = { version = "1.44.0", features = ["full"] }
alloy = { version = "0.12.5", features = ["full"] }
alloy-primitives = "0.8.22"
alloy-contract = "0.12.5"
alloy-provider = "0.12.5"
alloy-rpc-types = "0.12.5"
alloy-network = "0.12.5"
alloy-erc20 = "0.5.0"
axum = "0.8.1"

[build-dependencies]
sp1-build = "4.0.0"
